--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>pt.tsbatista</groupId>
   <artifactId>mvn-demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>mvn-demo</name>
   <url>http://maven.apache.org</url>
