--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,31 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.3.1</version>
+                <executions>
+                    <execution>
+                        <id>enforce-versions</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <rules>
+                        <DependencyConvergence />
+                        <requireMavenVersion>
+                            <version>[3.0.4,)</version>
+                            <message>[ERROR] This project requires Maven 3.0.4 or higher</message>
+                        </requireMavenVersion>
+                    </rules>
+                </configuration>
+            </plugin>
+            
         </plugins>
     </build>
     <properties>
@@ -36,7 +61,20 @@
     </properties>
 
     <dependencies>
+        <!-- lets try to pull in multiple instances of some dependencies! -->
         <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>opensaml</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+                
+                
+        <dependency>        
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8.1</version>
