--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,27 +8,34 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    
     <artifactId>mvn-demo-web</artifactId>
-    
+
     <packaging>war</packaging>
 
     <name>mvn-demo-web</name>
-    
+
     <build>
         <plugins>
             <!-- compiler and war plugins are implicit due to project type -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-            </plugin>   
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
         </plugins>
-        
-    
+
+
     </build>
-    
-    
-    
+
+
+
     <dependencies>
         <!-- lets try to pull in multiple instances of some dependencies! -->
         <dependency>
@@ -39,9 +46,9 @@
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-server</artifactId>
         </dependency>
-                
-                
-        <dependency>        
+
+
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
