--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
                     </executions>
                 </plugin>
 
+                <!-- add plugins that will run in the pedantic build here without binding them to the build process -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
@@ -86,6 +87,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
                     <version>1.3.1</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.11</version>
                 </plugin>
 
                 <!-- add any plugins that may influence the final artifact here -->
@@ -116,12 +123,36 @@
                                 <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                                 <minimumTokens>100</minimumTokens>
                                 <targetJdk>1.7</targetJdk>
+                                <linkXRef>false</linkXRef>
                             </configuration>
                             <executions>
                                 <execution>
                                     <goals>
                                         <goal>check</goal>
                                         <goal>cpd-check</goal>
+                                    </goals>
+                                </execution>
+                            </executions>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-checkstyle-plugin</artifactId>
+                            <version>2.11</version>
+                            <executions>
+                                <execution>
+                                    <id>validate</id>
+                                    <phase>validate</phase>
+                                    <configuration>
+                                        <encoding>UTF-8</encoding>
+                                        <consoleOutput>true</consoleOutput>
+                                        <!-- if you really want pedantic... uncomment the next line and cry! -->
+                                        <failOnViolation>false</failOnViolation>
+                                        <linkXRef>false</linkXRef>
+                                        <targetJdk>1.7</targetJdk>
+                                    </configuration>
+                                    <goals>
+                                        <goal>check</goal>
                                     </goals>
                                 </execution>
                             </executions>
